--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Juergen Ryannel <juergen@ryannel.org>",
   "license": "MIT",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "vuepress": "^1.8.2",
     "vuepress-plugin-mermaidjs": "^1.8.1"
   },
