ch16-17: WIP! all executable examples are built with CMake

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.16.0)
 
 add_subdirectory(ch07-modelview/src)
+add_subdirectory(ch16-qtcpp/src)
+add_subdirectory(ch17-extensions/src)
