--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "scripts": {
     "docs:dev": "vuepress dev docs --host 127.0.0.1",
     "docs:build": "vuepress build docs",
-    "docs:examples": "./build-examples.sh"
+    "examples:build": "./build-examples.sh"
   }
 }
