yarn: created command to build example tarball

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs --host 127.0.0.1",
     "docs:build": "vuepress build docs",
-    "examples:build": "./build-examples.sh"
+    "examples:build": "./scripts/build-examples.sh",
+    "examples:package": "./scripts/package-examples.sh"
   }
 }
