--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -3,3 +3,6 @@ cmake_minimum_required(VERSION 3.16.0)
 add_subdirectory(ch07-modelview/src)
 add_subdirectory(ch16-qtcpp/src)
 add_subdirectory(ch17-extensions/src)
+add_subdirectory(zh/ch07-modelview/src)
+add_subdirectory(zh/ch16-qtcpp/src)
+add_subdirectory(zh/ch17-extensions/src)
