--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,9 +5,10 @@ on:
       - 'release'
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Trigger qt.io build
-      env:
-        QT_IO_TRIGGER: ${{ secrets.QT_IO_TRIGGER }}
-      run: curl $QT_IO_TRIGGER
+  build-qt-io:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger qt.io build
+        env:
+            QT_IO_TRIGGER: ${{ secrets.QT_IO_TRIGGER }}
+        run: curl $QT_IO_TRIGGER
